--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,14 @@
 {
-	"name" : "yii-node-socket",
-	"description" : "Yii component for sending events from php and catch it on javascript side",
-	"version" : "0.1.0",
-	"dependencies" : {
-		"express" : "3.x",
-		"socket.io" : "0.9.x",
-		"cookie" : ">=0.1.x",
-		"mongoose" : ">=3.6.x",
-		"mysql" : ">=2.x"
-	}
+  "name": "yii-node-socket",
+  "description": "Yii component for web-sockets",
+  "version": "0.1.0",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "convict": "^1.5.0",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "php-unserialize": "0.0.1",
+    "redis": "^2.6.2",
+    "socket.io": "^1.5.1"
+  }
 }
