--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "yiisoft/yii2-redis": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "~2.0"
