--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "convict": "^1.5.0",
+    "cookie": "*",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "php-unserialize": "0.0.1",
